--- a/package.json
+++ b/package.json
@@ -88,3 +88,18 @@
     "vite-plugin-svgr": "^4.5.0"
   }
 }
+{
+  "name": "techwire",
+  "version": "0.1.0",
+  // 新增这部分
+  "engines": {
+    "node": "24.12.0",
+    "pnpm": ">=9.0.0 <10.0.0"
+  },
+  // 确保有build脚本（没有的话本地先配置，否则构建会失败）
+  "scripts": {
+    "dev": "你的开发命令",
+    "build": "你的构建命令" // 必须有这个脚本！比如vite build/next build
+  },
+  // 其他原有内容（dependencies/devDependencies等）...
+}
