--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-  "name": "miaoda-react-admin",
-  "version": "0.0.1",
+  "name": "techwire",
+  "version": "0.1.0",
   "type": "module",
+  "engines": {
+    "node": "24.12.0",
+    "pnpm": ">=9.0.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -46,7 +50,7 @@
     "input-otp": "^1.4.2",
     "ky": "^1.13.0",
     "lucide-react": "^0.553.0",
-    "miaoda-auth-react": "2.0.6",
+    "miaoda-auth-react": "^2.0.6",
     "miaoda-sc-plugin": "1.0.52",
     "motion": "^12.23.25",
     "next-themes": "^0.4.6",
@@ -87,19 +91,4 @@
     "vite": "^5.1.4",
     "vite-plugin-svgr": "^4.5.0"
   }
-}
-{
-  "name": "techwire",
-  "version": "0.1.0",
-  // 新增这部分
-  "engines": {
-    "node": "24.12.0",
-    "pnpm": ">=9.0.0 <10.0.0"
-  },
-  // 确保有build脚本（没有的话本地先配置，否则构建会失败）
-  "scripts": {
-    "dev": "你的开发命令",
-    "build": "你的构建命令" // 必须有这个脚本！比如vite build/next build
-  },
-  // 其他原有内容（dependencies/devDependencies等）...
 }
