--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
   "installCommand": "pnpm install --timeout 600000 --registry https://registry.npmmirror.com/",
-  "buildCommand": "pnpm run build",
+  "buildCommand": "pnpm run build"
   
 }
