修复部署配置问题：1. 更新 Node.js 版本格式为 24.x 2. 修复 pnpm install 命令中的 --timeout 选项为 --fetch-timeout

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,4 @@
 {
-  "installCommand": "pnpm install --timeout 600000 --registry https://registry.npmmirror.com/",
+  "installCommand": "pnpm install --fetch-timeout 600000 --registry https://registry.npmmirror.com/",
   "buildCommand": "pnpm run build"
-  
 }
