--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "type": "module",
   "engines": {
-    "node": "24.12.0",
+    "node": "24.x",
     "pnpm": ">=9.0.0"
   },
   "scripts": {
