更新 .gitignore 文件，添加对部署目录的忽略规则

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,10 @@ output
 *.local
 package-lock.json
 
+# Deploy directories
+infinityfree-deploy
+infinityfree-deploy.zip
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
